# superstition

./: .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: api.rs  builder.rs  codegen.rs  main.rs  state.rs
crates/corpus/: Cargo.toml
crates/corpus/src/: lib.rs
crates/detectors/det-bad-counts/: Cargo.toml
crates/detectors/det-bad-counts/src/: lib.rs
crates/detectors/det-panic/: Cargo.toml
crates/detectors/det-panic/src/: lib.rs
crates/detectors/det-timeout/: Cargo.toml
crates/detectors/det-timeout/src/: lib.rs
crates/detectors/det-timeout/wit/: world.wit
crates/detectors/dow-erc20/: Cargo.toml
crates/detectors/dow-erc20/src/: lib.rs
crates/feed/: Cargo.toml
crates/feed/src/: lib.rs
crates/fetch/: Cargo.toml
crates/host/: Cargo.toml
crates/host/src/: lib.rs  main.rs
crates/host/tests/: adversarial.rs
crates/scorer/: Cargo.toml
crates/scorer/src/: fdr.rs  lib.rs  stats.rs
examples/: README.md  feed-wild.json  feed.json  run.sh  state-wild.json  state.json
wit/: superstition.wit
