[workspace]
members = [
    "crates/detectors/dow-erc20",
    "crates/detectors/month-of-year-seasonality",
    "crates/detectors/det-timeout",
    "crates/detectors/det-panic",
    "crates/detectors/det-bad-counts",
    "crates/host",
    "crates/scorer",
    "crates/corpus",
    "crates/agent",
    "crates/feed",
    "crates/fetch",
]
resolver = "2"
