[package]
name = "superstition-fetch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-wild"
path = "src/bin/fetch_wild.rs"

[dependencies]
anyhow     = "1"
arrow      = { version = "53", default-features = false, features = ["ipc"] }
parquet    = "53"
ureq       = { version = "2", features = ["json"] }
serde_json = "1"
